# aurora

./: .gitignore  CMakeLists.txt
include/: InputHandlerSystem.h  debug.h  game.hpp  gameObject.hpp  gameStates.h  player.hpp
src/: game.cpp  gameStates.cpp  main.cpp
src/Input/: InputHandlerSystem.cpp
src/UI/: debug.cpp
src/objects/: gameObject.cpp
src/objects/player/: player.cpp
